# clipstash

./: 00_notes.md  Cargo.toml  README.md
src/lib/: mod.rs
src/lib/domain/clip/: mod.rs
src/lib/domain/clip/field/: content.rs  mod.rs
