[package]
name = "clipstash"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]

# For adding the following traits to structs
# `[derive(Deserialize, Serialize)]`
serde = "1"

# For converting data into a json format
serde_json = "1"

thiserror = "1"
