[package]
name = "clipstash"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]

# For adding the following traits to structs
# `[derive(Deserialize, Serialize)]`
# This prepares your Rust structs so they’re ready 
# to be converted to or from a data format, using the `serde_json` crate
serde = { version = "1.0", features = ["derive"] }

# This is the crate that does the conversion.
# It takes those prepped structs 
# and does the actual work of turning them 
# into JSON or reading JSON back into structs.
serde_json = "1"

# Allows you to use the trait
# `[derive(Error)]`
thiserror = "1"

chrono = { version = "0.4", features = ["serde"] }

uuid = { version = "0.8", features = ["serde", "v4"] }
